--- a/style.css
+++ b/style.css
@@ -30,9 +30,13 @@ section{
     float: left;
     margin-left: 10%;
 }
+section > h1{
+    margin: 0;
+    
+    font-size: 2em;
+}
 article{
     width: 48%;
-    
     float: left;
     height: 170px;
     margin-right: 2%;
